...
            android:background="@drawable/add_button"
            android:backgroundTint="@color/grey"
            android:onClick="openFileChooser"
            />

        <EditText
            android:id="@+id/edit_gchat_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/attach"
            android:layout_toStartOf="@+id/button_gchat_send"
            android:autofillHints="Enter Message"
            android:background="@android:color/transparent"
            android:hint="Enter Message"
            android:inputType="text"
            android:maxLines="6" />

...
