...
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/sub_parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label"
        />
...
        android:layout_marginBottom="40dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:text="Chat Box"
            android:textSize="22sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:gravity="center"
            android:onClick="chat"/>
...
