...
            android:paddingBottom="8dp"
            android:src="@drawable/plant"
            app:layout_constraintStart_toEndOf="@id/group_header_text"
            app:layout_constraintTop_toTopOf="@id/group_header_text" />

        <Button
            android:id="@+id/addSign"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/add_button"
            android:onClick="onNewGroupClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/group_header_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/group_list_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_parent" />

...
