...
        android:text="Group Name"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_parent" />

    <EditText
        android:id="@+id/group_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:labelFor="@id/label"
        android:textSize="22dp"
...
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/users_list" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:onClick="submit"

        android:text="Submit"
...
