<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_list_item"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/group_list_name"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:text="mytext"/>

    <ImageView
        android:id="@+id/group_list_join_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:contentDescription="join_button" />

</RelativeLayout>