<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE8F4"
    tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sub_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="Study Buddy"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/loginText"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="Log In"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:gravity="center"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sub_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="115dp"
        />



    <EditText
        android:id="@+id/usernameText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/boxes_background"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/boxes_background"
        app:layout_constraintTop_toBottomOf="@id/usernameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="#D3D3D3"
        android:textColor="#666666"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />
    <Button
        android:id="@+id/signupButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:backgroundTint="#D3D3D3"
        android:textColor="#666666"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>