...
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ListView
        android:id="@+id/listCourses"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:dividerHeight="1dp"
        app:layout_constraintTop_toBottomOf="@id/sub_parent"
        app:layout_constraintBottom_toTopOf="@id/HomePageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/signoutButton"
...
