...
            android:textSize="32sp"
            app:layout_constraintStart_toEndOf="@id/back_arrow"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/nameText"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/nameT"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:padding="16dp"
...
